# custos-school-management-system

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  FRONTEND_DEV_PROMPT.md  README.md  docker-compose.yml  init_db.py  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 002_teaching_assignments.py  003_timetables.py  004_schedule.py  005_daily_loops.py  006_weekly_tests.py  007_lesson_evaluation.py  008_ai_lesson_plan_jobs.py  009_ocr_engine.py  010_ai_question_gen.py  011_fees_finance.py  47a545eb8e5a_merge_heads_before_feedback.py  README  phase5_payment_gateway.py  phase6_hostel.py  phase6_hr_payroll.py  phase6_transport.py  phase7_analytics.py  phase7_governance.py  phase7_insights.py  phase85_student_lifecycle.py  phase85b_participation.py  phase85c_corrections.py  phase8_job_executions.py
app/: __init__.py  main.py
app/academics/: __init__.py  participation.py
app/activity_points/: __init__.py  models.py  router.py  schemas.py  service.py
app/ai/: __init__.py  base.py  doubt_solver.py  fuzzy_matcher.py  lesson_generator.py  lesson_plan_generator.py  models.py  ocr_models.py  ocr_router.py  ocr_schemas.py  ocr_service.py  openai_provider.py  quality_models.py  quality_service.py  question_gen_router.py  question_gen_schemas.py  question_gen_service.py  question_generator.py  tasks.py  (+5 more)
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
scripts/: README  seed.py  worker.py
tests/: __init__.py  conftest.py  test_auth.py  test_hostel_api.py  test_questions.py  test_rbac.py
(+413 files in other folders)
